--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@emailjs/browser": "^4.3.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
     "@mui/material": "^5.15.15",
+    "@next/mdx": "^14.2.4",
     "@next/third-parties": "^14.2.3",
     "@plaiceholder/next": "^3.0.0",
+    "@types/mdx": "^2.0.13",
     "browser-image-compression": "^2.0.2",
     "classnames": "^2.5.1",
     "firebase": "^10.11.1",
@@ -26,6 +30,7 @@
     "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sharp": "^0.33.3",
     "showdown": "^2.1.0",
     "uuid": "^9.0.1"
@@ -38,6 +43,7 @@
     "@types/uuid": "^9.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
+    "sass": "^1.77.6",
     "typescript": "^5"
   }
 }
