Added animations to hover, some house keeping

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "marked-react": "^2.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "next-plugin-svgr": "^1.1.10",
     "plaiceholder": "^3.0.0",
     "react": "^18",
     "react-dom": "^18",
@@ -36,6 +37,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
