--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@next/third-parties": "^14.2.3",
     "@plaiceholder/next": "^3.0.0",
     "@types/mdx": "^2.0.13",
+    "@vercel/analytics": "^1.3.1",
     "browser-image-compression": "^2.0.2",
     "classnames": "^2.5.1",
     "firebase": "^10.11.1",
