added new page and also grammar fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
       ]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/post/pacific-northwest.mdx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/post/*.mdx"
+  ],
   "exclude": ["node_modules"]
 }
